add list generated based on sequence

--- a/loops/src/main/resources/templates/example.html
+++ b/loops/src/main/resources/templates/example.html
@@ -11,5 +11,9 @@
         <span th:text="${status.count + ' / ' + status.size + ' ' + person.firstName + ' ' +  person.lastName}"></span>
     </li>
 </ul>
+<h2>Lista generowana na podstawie sekwencji</h2>
+<ul>
+    <li th:each="i : ${#numbers.sequence(1, size)}" th:text="'Liczba nr: ' + ${i}"></li>
+</ul>
 </body>
 </html>
