add span with th:text

--- a/thymeleaf-text/src/main/resources/templates/index.html
+++ b/thymeleaf-text/src/main/resources/templates/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1>Praca z tekstem</h1>
-  <p th:utext="${dangerousCode}">Jakiś tekst</p>
+<!--  <p th:utext="${dangerousCode}">Jakiś tekst</p>-->
+    <p>Twoje imię: <span th:text="${firstName}"></span></p>
 </body>
 </html>
