--- a/thymeleaf-text/src/main/resources/templates/index.html
+++ b/thymeleaf-text/src/main/resources/templates/index.html
@@ -7,6 +7,8 @@
 <body>
   <h1>Praca z tekstem</h1>
 <!--  <p th:utext="${dangerousCode}">Jakiś tekst</p>-->
-    <p>Twoje imię: <span th:text="${firstName}"></span></p>
+<!--  <p>Twoje imię: <span th:text="${firstName}"></span></p>-->
+    <p th:inline="text">Twoje imię: [[${firstName}]]</p>
+
 </body>
 </html>
