add th:text concatenation

--- a/thymeleaf-text/src/main/resources/templates/index.html
+++ b/thymeleaf-text/src/main/resources/templates/index.html
@@ -9,6 +9,8 @@
 <!--  <p th:utext="${dangerousCode}">Jakiś tekst</p>-->
 <!--  <p>Twoje imię: <span th:text="${firstName}"></span></p>-->
 <!--    <p th:inline="text">Twoje imię: [[${firstName}]]</p>-->
-    <p th:text="'Twoje imię: ' + ${firstName}"></p>
+<!--    <p th:text="'Twoje imię: ' + ${firstName}"></p>-->
+<!--    <p th:text="'Twoje imię i nazwisko: ' + ${firstName} + ' ' + ${lastName}"></p>-->
+    <p th:text="'Twoje imię i nazwisko: ' + ${firstName} + ' ' + ${lastName}"></p>
 </body>
 </html>
