add literal substitution

--- a/thymeleaf-text/src/main/resources/templates/index.html
+++ b/thymeleaf-text/src/main/resources/templates/index.html
@@ -11,6 +11,6 @@
 <!--    <p th:inline="text">Twoje imię: [[${firstName}]]</p>-->
 <!--    <p th:text="'Twoje imię: ' + ${firstName}"></p>-->
 <!--    <p th:text="'Twoje imię i nazwisko: ' + ${firstName} + ' ' + ${lastName}"></p>-->
-    <p th:text="'Twoje imię i nazwisko: ' + ${firstName} + ' ' + ${lastName}"></p>
+    <p th:text="|Twoje imię i nazwisko: ${firstName} ${lastName}|"></p>
 </body>
 </html>
