--- a/thymeleaf-selekcja/src/main/resources/templates/index.html
+++ b/thymeleaf-selekcja/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
                 <td th:text="${status.count}">1</td>
                 <td th:text="*{name}">Chipsy</td>
                 <td th:text="*{producer}">Pan Chrupek</td>
-                <td th:text="*{price}">1.9</td>
+                <td th:text="*{price + ' zł'}">1.9</td>
             </tr>
         </tbody>
     </table>
