--- a/thymeleaf-adresy/src/main/resources/templates/index.html
+++ b/thymeleaf-adresy/src/main/resources/templates/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Galeria zdjęć</title>
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" th:href="@{/styles/main.css}">
 </head>
 <body>
     <div class="container">
         <h1>Galeria zdjęć</h1>
-        <img src="/images/gallery.jpg" alt="Galeria zdjęć">
+        <img th:src="@{/images/gallery.jpg}" alt="Galeria zdjęć">
         <p th:each="pic: ${pictures}">
-            <a th:href="|/pic?id=${pic.id}|" th:text="${pic.title}">Przykładowe zdjęcie</a>
+            <a th:href="@{|/pic?id=${pic.id}|}" th:text="${pic.title}">Przykładowe zdjęcie</a>
         </p>
     </div>
 </body>
