--- a/thymeleaf-adresy/src/main/resources/templates/index.html
+++ b/thymeleaf-adresy/src/main/resources/templates/index.html
@@ -3,15 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Galeria zdjęć</title>
-    <link rel="stylesheet" th:href="@{/styles/main.css}">
+    <link rel="stylesheet" th:href="@{/styles/main.css}" href="../static/styles/main.css">
 </head>
 <body>
     <div class="container">
         <h1>Galeria zdjęć</h1>
-        <img th:src="@{/images/gallery.jpg}" alt="Galeria zdjęć">
-        <p th:each="pic: ${pictures}">
-            <a th:href="@{|/pic?id=${pic.id}|}" th:text="${pic.title}">Przykładowe zdjęcie</a>
-        </p>
+        <img th:src="@{/images/gallery.jpg}" src="../static/images/gallery.jpg" alt="Galeria zdjęć">
+        <div th:remove="all-but-first">
+            <p th:each="pic: ${pictures}">
+                <a th:href="@{|/pic?id=${pic.id}|}" th:text="${pic.title}" href="#">Przykładowe zdjęcie 1</a>
+            </p>
+            <p>
+                <a href="#">Przykładowe zdjęcie 2</a>
+            </p>
+            <p>
+                <a href="#">Przykładowe zdjęcie 2</a>
+            </p>
+        </div>
     </div>
 </body>
 </html>
