add session scoped component

--- a/sesje/src/main/resources/templates/index.html
+++ b/sesje/src/main/resources/templates/index.html
@@ -5,6 +5,6 @@
     <title>Licznik odwiedzin</title>
 </head>
 <body>
-    <p th:text="|Twoja liczba odwiedzin: ${session.counter}|">Twoja liczba odwiedzin: 123</p>
+    <p th:text="|Twoja liczba odwiedzin: ${@visitCounter.counter}|">Twoja liczba odwiedzin: 123</p>
 </body>
 </html>
