--- a/fragmenty/src/main/resources/templates/index.html
+++ b/fragmenty/src/main/resources/templates/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="pl" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments :: head(title='Witaj w Skleppiku')}"></head>
+<html lang="pl" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
+<head>
+    <title>Strona główna</title>
+</head>
 <body>
-<header th:replace="~{fragments :: header}"></header>
-<main>
+<main layout:fragment="content">
     <h2>Lista produktów</h2>
 
     <ul th:remove="all-but-first">
@@ -26,6 +29,5 @@
         </li>
     </ul>
 </main>
-<footer th:replace="~{fragments :: footer}"></footer>
 </body>
 </html>
