--- a/fragmenty/src/main/resources/templates/product.html
+++ b/fragmenty/src/main/resources/templates/product.html
@@ -1,31 +1,21 @@
 <!DOCTYPE html>
-<html lang="pl" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments :: head(title=|${product.name} w Skleppiku|)}"></head>
+<html lang="pl" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
+<head>
+    <title th:text="${product.name}">Telewizor - Skleppik</title>
+</head>
 <body>
-<header th:replace="~{fragments :: header}"></header>
-<main>
-    <h2>Lista produktów</h2>
-
-    <ul th:remove="all-but-first">
-        <li th:each="product: ${products}">
-            <a href="#"
-               th:href="@{|/product?id=${product.id}|}"
-               th:text="|${product.name} ${product.price}zł|">
-                Telewizor 2499zł
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                Radio 999zł
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                Smartfon 1799zł
-            </a>
-        </li>
-    </ul>
+<main layout:fragment="content">
+    <h2>Informacje o produkcie</h2>
+    <p th:text="|Nazwa: ${product.name}|">Nazwa: Telewizor</p>
+    <p>
+        <i class="fas fa-tv fa-10x product-icon" th:class="|fas fa-10x product-icon fa-${product.icon}|"></i>
+    </p>
+    <p th:text="|Cena: ${product.price}zł|">Cena: 2499zł</p>
+    <p th:text="|Opis: ${product.description}|">
+        Opis: Znakomity telewizor Oled z dźwiękiem przestrzennym i niesamowitymi kolorami
+    </p>
 </main>
-<footer th:replace="~{fragments :: footer}"></footer>
 </body>
 </html>
